# personalise.ai

./: .gitignore  README.md  create_icons.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: linkedin-scraper.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  check_log.txt  personaliz.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20260216000000_initial.sql  20260217000000_linkedin_trends.sql
src-tauri/src/: main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/linkedin/: mod.rs
src-tauri/src/llm/: external.rs  local.rs  mod.rs  router.rs
src-tauri/src/openclaw/: agent_builder.rs  cli_wrapper.rs  mod.rs
src-tauri/src/sandbox/: mod.rs
src-tauri/src/scheduler/: mod.rs
src/components/: AgentPreview.tsx  ChatPanel.tsx  FloatingAssistant.tsx  LinkedInPanel.tsx  SettingsPanel.tsx
src/lib/: api.ts
src/store/: index.ts
